--- a/TranslationReg/Views/Shared/_Layout.cshtml
+++ b/TranslationReg/Views/Shared/_Layout.cshtml
@@ -174,6 +174,12 @@
             float: left;
         }
 
+        .titleAndIcon h2,
+        .titleAndIcon h3 {
+            align-self: center;
+            float: left;
+        }
+
             .titleAndIcon i:hover {
                 color: #d41955;
                 transition: 0.3s;
