--- a/TranslationReg/Views/Documents/List.cshtml
+++ b/TranslationReg/Views/Documents/List.cshtml
@@ -1,12 +1,12 @@
 ﻿@model IEnumerable<TranslationRegistryModel.Document>
 <div class="tableMaterial">
     <div class="titles">
-        <div class="col-md-3">@Html.Label("Наименование")</div>
-        <div class="col-md-2">@Html.Label("Дата")</div>
-        <div class="col-md-1">@Html.Label("Слова")</div>
-        <div class="col-md-2">@Html.Label("Оригинал")</div>
-        <div class="col-md-2">@Html.Label("Перевод")</div>
-        <div class="col-md-2">@Html.Label("Команды")</div>
+        <div class="col-md-3">Наименование</div>
+        <div class="col-md-2">Дата</div>
+        <div class="col-md-1">Слова</div>
+        <div class="col-md-2">Оригинал</div>
+        <div class="col-md-2">Перевод</div>
+        <div class="col-md-2">Команды</div>
     </div>
 
     @foreach (var document in Model)
