--- a/TranslationReg/Views/Shared/_Layout.cshtml
+++ b/TranslationReg/Views/Shared/_Layout.cshtml
@@ -167,7 +167,8 @@
         display: flex;
     }
 
-        .titleAndIcon i {
+        .titleAndIcon i,
+        .titleAndIcon > a{
             font-size: 30px;
             color: #3d5279;
             align-self: center;
@@ -210,6 +211,7 @@
             display: block;
             overflow-y: scroll;
             overflow-x: hidden;
+            padding: 10px 20px;
         }
 
         .content-container .menu {
