--- a/TranslationReg/Views/Projects/List.cshtml
+++ b/TranslationReg/Views/Projects/List.cshtml
@@ -2,12 +2,12 @@
 
 <div class="tableMaterial">
     <div class="titles">
-        <div class="col-md-3">@Html.Label("Название")</div>
-        <div class="col-md-2">@Html.Label("Заказчик")</div>
-        <div class="col-md-2">@Html.Label("Статус")</div>
-        <div class="col-md-1">@Html.Label("Перевод")</div>
-        <div class="col-md-2">@Html.Label("Дедлайн")</div>
-        <div class="col-md-2">@Html.Label("Команды")</div>
+        <div class="col-md-3">Название</div>
+        <div class="col-md-2">Заказчик</div>
+        <div class="col-md-2">Статус</div>
+        <div class="col-md-1">Перевод</div>
+        <div class="col-md-2">Дедлайн</div>
+        <div class="col-md-2">Команды</div>
     </div>
 
     @foreach (var project in Model)
@@ -16,6 +16,7 @@
 
             <div class="col-md-3">
                 <a class="titleLink" href="/Projects/Project/@(project.Id)">@project.Name</a>
+                <a class="titleLink" href="/Projects/TabPages/@(project.Id)">@project.Name</a>
             </div>
 
             <div class="col-md-2">
