--- a/TranslationReg/Style/Site.css
+++ b/TranslationReg/Style/Site.css
@@ -19,5 +19,9 @@ input,
 select,
 textarea {
     max-width: 280px;
-    height:35px;
+    height: 35px;
+    padding: 6px;
+    font-size: 18px;
+    border: none;
+    border-radius:5px;
 }
