--- a/TranslationReg/Style/style.css
+++ b/TranslationReg/Style/style.css
@@ -15,6 +15,20 @@ h2 {
     padding-left: 50px;
 }
 
+input,
+select,
+textarea {
+    max-width: 280px;
+    height: 35px;
+}
+
+
+/* Override the default bootstrap behavior where horizontal description lists 
+   will truncate terms that are too long to fit in the left column 
+*/
+.dl-horizontal dt {
+    white-space: normal;
+}
 html {
     height: 100%;
 }
@@ -36,6 +50,8 @@ body {
     position: relative;
     background-image: url(images/bodyBg.jpg);
     background-size: cover;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 .footer {
