--- a/TranslationReg/Style/style.css
+++ b/TranslationReg/Style/style.css
@@ -50,8 +50,8 @@ body {
     position: relative;
     background-image: url(images/bodyBg.jpg);
     background-size: cover;
-    padding-top: 0px;
-    padding-bottom: 0px;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 .footer {
@@ -407,63 +407,6 @@ addFormContainer {
     color: black;
 }
 
-.download-Btn {
-    text-align: center;
-    display: inline-block;
-    position: relative;
-    text-decoration: none;
-    color: white;
-    text-transform: capitalize;
-    padding: 5px 0px;
-    width: 110px;
-    border-radius: 4px;
-    overflow: hidden;
-    transition: all .2s linear 0s;
-    background: #F28123;
-    font-size: 16px;
-}
-
-    .download-Btn:before {
-        content: "\f019";
-        font-family: FontAwesome;
-        font-size: 15px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: absolute;
-        top: 0;
-        right: -30px;
-        width: 30px;
-        height: 100%;
-        background-color: #F28123;
-        transition: all 0.2s linear 0s;
-        text-align: center;
-    }
-
-.costum-btn {
-    text-align: center;
-    display: inline-block;
-    position: relative;
-    text-decoration: none;
-    color: white;
-    text-transform: capitalize;
-    padding: 5px 0px;
-    width: 110px;
-    border-radius: 4px;
-    background: #F28123;
-    font-size: 16px;
-}
-
-.costum-btn_edit::before {
-    content: "\f040";
-    font-family: FontAwesome;
-    font-size: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-}
-
 .float-label {
     display: flex;
     flex-wrap: wrap;
@@ -572,7 +515,7 @@ addFormContainer {
     height: 70px;
     text-align: center;
     color: #fff;
-    padding-top: 0px;
+    padding-top: 0;
 }
 
 .active-drop {
