--- a/TranslationReg/Views/Documents/Index.cshtml
+++ b/TranslationReg/Views/Documents/Index.cshtml
@@ -2,10 +2,9 @@
 @{ViewBag.Title = "Документы";}
 
 <!-- ЗАГОЛОВОК И КНОПКА ДОБАВЛЕНИЯ -->
-<div class="titleAndIcon">
-    <h2>Документы</h2>
-    <i class="material-icons ajaxToggleBtn" data-ajax-update="#addDoc" data-href="/Documents/Create">add_circle</i>
-</div>
+<h2 class="iconed-text"> Документы
+   <i class="material-icons right-icon ajaxToggleBtn" data-ajax-update="#addDoc" data-href="/Documents/Create">add_circle</i>
+</h2>
 
 <!-- ОБЛАСТЬ ДОБАВЛЕНИЯ ДОКУМЕНТОВ -->
 <div id="addDoc" class="dynamicBlock dynamic-block-create"></div>
