--- a/TranslationReg/Views/Documents/List.cshtml
+++ b/TranslationReg/Views/Documents/List.cshtml
@@ -32,7 +32,7 @@
                 @if (!String.IsNullOrWhiteSpace(document.OriginalFile.Path))
                 {
                     <div class="buttons-container">
-                        <a href="@Url.Action("Download", "Documents", new { @filepath = document.OriginalFile.Path })" class="listIcon">
+                        <a href="@Url.Action("Download", "Documents", new { @filepath = document.OriginalFile.Path })" class="icon-list">
                             <i class="material-icons">file_download</i>
                         </a>
                     </div>
@@ -42,7 +42,7 @@
                 @if (document.FinalFile != null && !String.IsNullOrWhiteSpace(document.FinalFile.Path))
                 {
                     <div class="buttons-container">
-                        <a href="@Url.Action("Download", "Documents", new { @filepath = document.FinalFile.Path })" class="listIcon">
+                        <a href="@Url.Action("Download", "Documents", new { @filepath = document.FinalFile.Path })" class="icon-list">
                             <i class="material-icons">file_download</i>
                         </a>
                     </div>
@@ -50,10 +50,10 @@
             </div>
             <div class="col-md-2">
                 <div class="buttons-container">
-                    <a href="/Documents/Edit/@document.Id" class="listIcon">
+                    <a href="/Documents/Edit/@document.Id" class="icon-list">
                         <i class="material-icons">mode_edit</i>
                     </a>
-                    <a data-href="/Documents/Delete/@document.Id" class="deleteBtn listIcon" data-dialog-title="Удаление документа и работ">
+                    <a data-href="/Documents/Delete/@document.Id" class="deleteBtn icon-list" data-dialog-title="Удаление документа и работ">
                         <i class="material-icons">delete</i>
                     </a>
                 </div>
