--- a/TranslationReg/Views/Projects/Index.cshtml
+++ b/TranslationReg/Views/Projects/Index.cshtml
@@ -3,10 +3,9 @@
 
 
 <!-- ЗАГОЛОВОК И КНОПКА ДОБАВЛЕНИЯ -->
-<div class="titleAndIcon">
-    <h2>Проекты</h2>
-    <i class="material-icons ajaxToggleBtn" data-ajax-update="#addProj" data-href="/Projects/Create">add_circle</i>
-</div>
+<h2 class="iconed-text">Проекты
+    <i class="material-icons right-icon ajaxToggleBtn" data-ajax-update="#addProj" data-href="/Projects/Create">add_circle</i>
+</h2>
 
 <!-- ОБЛАСТЬ ДОБАВЛЕНИЯ ПРОЕКТОВ -->
 <div id="addProj" class="dynamicBlock dynamic-block-create"></div>
