--- a/TranslationReg/Views/Projects/List.cshtml
+++ b/TranslationReg/Views/Projects/List.cshtml
@@ -46,10 +46,10 @@
             </div>
             <div class="col-md-2">
                 <div class="buttons-container">
-                    <a href="/Projects/Edit/@project.Id" class="listIcon">
+                    <a href="/Projects/Edit/@project.Id" class="icon-list">
                         <i class="material-icons">mode_edit</i>
                     </a>
-                    <a data-href="/Projects/Delete/@project.Id" class="deleteBtn listIcon" data-dialog-title="Удаление проекта и содержимого">
+                    <a data-href="/Projects/Delete/@project.Id" class="deleteBtn icon-list" data-dialog-title="Удаление проекта и содержимого">
                         <i class="material-icons">delete</i>
                     </a>
                 </div>
