--- a/TranslationReg/Views/User_Stage/MyTasks.cshtml
+++ b/TranslationReg/Views/User_Stage/MyTasks.cshtml
@@ -20,12 +20,13 @@
 
 <div class="tableMaterial">
     <div class="titles">
-        <div class="col-md-3">Комментарий</div>
+        <div class="col-md-2">Проект</div>
         <div class="col-md-2">Документ</div>
-        <div class="col-md-1">Результат</div>
-        <div class="col-md-3">Проект</div>
+        <div class="col-md-1">Оригинал</div>
+        <div class="col-md-3">Комментарий</div>
         <div class="col-md-1">Объем</div>
         <div class="col-md-1">Дедлайн</div>
+        <div class="col-md-1">Результат</div>
         <div class="col-md-1">Команды</div>
     </div>
 
@@ -33,6 +34,30 @@
         @foreach (var userStage in Model)
         {
             <div class="properties">
+
+                <!-- Проект -->
+                <div class="col-md-2">
+                    <a class="titleLink">
+                        @userStage.Stage.Document.Project.Name
+                    </a>
+                </div>
+
+                <!-- Документ -->
+                <div class="col-md-2">
+                    <a class="titleLink">
+                        @userStage.Stage.Document.Name
+                    </a>
+                </div>
+
+                <!-- Оригинал -->
+                <div class="col-md-1">
+                    <span>
+                        <a href="@Url.Action("Download", "Documents", new { @filepath = userStage.Stage.Original.Path })" class="icon-list">
+                            <i class="material-icons right-icon">file_download</i>
+                        </a>
+                    </span>
+                </div>
+
                 <!-- Комментарий -->
                 <div class="col-md-3">
                     <span>
@@ -40,41 +65,13 @@
                     </span>
                 </div>
 
-                <!-- Документ -->
-                <div class="col-md-2">
-                    <span>
-                        @userStage.Stage.Document.Name
-                    </span>
-                    <div class="buttons-container">
-                        <a href="@Url.Action("Download", "Documents"/*, new { @filepath = userStage.Stage.Original.Path }*/)" class="listIcon">
-                            <i class="material-icons">file_download</i>
-                        </a>
-                    </div>
-                </div>
-
-                <!-- Результат -->
-                <div class="col-md-1">
-                    <div class="buttons-container">
-                        <a class="listIcon">
-                            <i class="material-icons">file_upload</i>
-                        </a>
-                    </div>
-                </div>
-
-                <!-- Проект -->
-                <div class="col-md-3">
-                    <span>
-                        <a class="titleLink">
-                            @userStage.Stage.Document.Project.Name
-                        </a>
-                    </span>
-                </div>
                 <!-- Объем -->
                 <div class="col-md-1">
                     <span>
                         @Html.DisplayFor(modelItem => userStage.Amount)
                     </span>
                 </div>
+
                 <!-- Дедлайн -->
                 <div class="col-md-1">
                     <span>
@@ -82,13 +79,22 @@
                     </span>
                 </div>
 
+                <!-- Результат -->
+                <div class="col-md-1">
+                    <div class="buttons-container">
+                        <a class="icon-list">
+                            <i class="material-icons">file_upload</i>
+                        </a>
+                    </div>
+                </div>
+
                 <!-- Команды -->
                 <div class="col-md-1">
                     <div class="buttons-container">
-                        <a href="/User_Stage/Edit/@userStage.Id" class="listIcon">
+                        <a href="/User_Stage/Edit/@userStage.Id" class="icon-list">
                             <i class="material-icons">mode_edit</i>
                         </a>
-                        <a class="deleteBtn listIcon" data-href="/User_Stage/Delete/@userStage.Id">
+                        <a class="deleteBtn icon-list" data-href="/User_Stage/Delete/@userStage.Id">
                             <i class="material-icons">delete</i>
                         </a>
                     </div>
