--- a/TranslationReg/Views/Documents/Index.cshtml
+++ b/TranslationReg/Views/Documents/Index.cshtml
@@ -7,7 +7,7 @@
 </h2>
 
 <!-- ОБЛАСТЬ ДОБАВЛЕНИЯ ДОКУМЕНТОВ -->
-<div id="addDoc" class="dynamicBlock dynamic-block-create"></div>
+<div id="addDoc" class="dynamicBlock"></div>
 
 <!-- ФИЛЬТРЫ -->
 <div class="filterContainer">
