--- a/TranslationReg/Views/Projects/Index.cshtml
+++ b/TranslationReg/Views/Projects/Index.cshtml
@@ -8,7 +8,7 @@
 </h2>
 
 <!-- ОБЛАСТЬ ДОБАВЛЕНИЯ ПРОЕКТОВ -->
-<div id="addProj" class="dynamicBlock dynamic-block-create"></div>
+<div id="addProj" class="dynamicBlock"></div>
 
 <!-- ФИЛЬТРЫ -->
 <div class="filterContainer">
