--- a/TranslationReg/Views/Shared/_Layout.cshtml
+++ b/TranslationReg/Views/Shared/_Layout.cshtml
@@ -245,7 +245,10 @@
         font-weight: 500;
         margin: 0;
     }
-
+    /* отмена краснения*/
+    .menu-content i:hover{
+        color:white;
+    }
     .menu-content > ul > li:hover {
         background-color: #c42d5b;
     }
