--- a/TranslationReg/Views/Projects/Project.cshtml
+++ b/TranslationReg/Views/Projects/Project.cshtml
@@ -1,7 +1,8 @@
 ﻿@model TranslationRegistryModel.Project
 @using TranslationReg.Controllers
 <!-- ЗАГОЛОВОК И КНОПКА РЕДАКТИРОВАНИЯ -->
-<h2 class="iconed-text">@Model.Name
+<h2 class="iconed-text">
+    @Model.Name
     <a href="/Projects/Edit/@Model.Id"><i class="material-icons right-icon">edit</i></a>
 </h2>
 
@@ -9,19 +10,19 @@
 <div class="filterContainer">
     <ul class="buttons">
         <li>
-            <div class="btn-wrapper ajaxToggleBtn" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addArea" data-href="/Documents/CreateProjectDoc/@Model.Id">
+            <div class="btn-wrapper ajaxToggleBtn" data-ajax-update="#addArea" data-href="/Documents/CreateProjectDoc/@Model.Id">
                 <i class="material-icons">add_circle</i>
                 <span> Документ</span>
             </div>
         </li>
         <li>
-            <div class="btn-wrapper ajaxToggleBtn" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addArea" data-href="/DocStages/ChooseForProject/@Model.Id">
+            <div class="btn-wrapper ajaxToggleBtn" data-ajax-update="#addArea" data-href="/DocStages/ChooseForProject/@Model.Id">
                 <i class="material-icons">add_circle</i>
                 <span> Стадия</span>
             </div>
         </li>
         <li>
-            <div class="btn-wrapper" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#projectList" href="/Projects/Finalise/@Model.Id">
+            <div class="btn-wrapper" data-ajax="true" data-ajax-update="#projectList" data-href="/Projects/Finalise/@Model.Id">
                 <i class="material-icons">done_all</i>
                 <span> Финализировать</span>
             </div>
@@ -72,30 +73,28 @@
                                     //--------------------------------------------- ОТОБРАЖЕНИЕ ДОКОВ ------------------------------------------
                                     var currentDoc = oneDocStages.First().Document;
                                     <div class="doc-container">
-                                        <img src="~/Uploads/DocIcons/Word.png" width="100" height="100" style="float:left"/>
-                                        <div class="buttons-container">
-                                            @if (currentDoc.FinalFileId != null)
-                                            {
-                                                <a class="icon-list"><i class="material-icons">file_download</i></a>
-                                            }
-                                            <a class="icon-list"><i class="material-icons">file_upload</i></a>
+                                        <img src="~/Uploads/DocIcons/Word.png" width="100" height="100" style="float:left" />
+                                        <div class="icons-row">
+                                            <a class="icon-list"><i class="material-icons">file_download</i></a>
                                             <a class="icon-list"><i class="material-icons">edit</i></a>
                                             <a class="icon-list"><i class="material-icons">delete</i></a>
                                         </div>
-                                        <hr style="margin:5px"/>
+                                        <hr style="margin:5px" />
                                         <p style="margin:0">@currentDoc.Name</p>
                                     </div>
                                     //----------------------------------------------------------------------------------------------------------
 
-
                                     //--------------------------------------------- ТАБЛИЦА РАБОТ ------------------------------------------
                                     // работы по доку в стадии
                                     var typedDocWorks = oneDocStages.SelectMany(x => x.User_Stage);
+                                    var stageId = oneDocStages.First().Id.ToString();
                                     <div class="works-table">
                                         <div class="tableMaterial">
                                             <div class="work-titles">
                                                 <div class="col-md-2" style="display:flex;">
-                                                    <i class="material-icons" style="margin-right: 50px">add_circle</i>
+                                                    <div data-ajax-update="#addWork@(stageId)" data-href="/User_Stage/Create/@stageId" class="ajaxToggleBtn">
+                                                        <i class="material-icons">add_circle</i>
+                                                    </div>
                                                     <span style="text-align: center; align-self: center; margin: auto;">
                                                         Исполнитель
                                                     </span>
@@ -106,6 +105,7 @@
                                             </div>
                                         </div>
                                         <div class="inner-padding">
+                                            <div id="addWork@(stageId)" class="dynamicBlock dynamic-block-create">123</div>
                                             @foreach (var work in typedDocWorks)
                                             {
                                                 <div class="properties">
@@ -150,6 +150,7 @@
                                         </div>
                                     </div>
                                 }
+                                <div style="clear:left"></div>
                             </div>
                             //----------------------------------------------------------------------------------------------------------
                         }
@@ -164,20 +165,11 @@
 }
 
 <style>
-
     .worktype-container {
         margin-bottom: 20px;
         width: 100%;
         height: 100%;
         clear: left;
-    }
-
-    .docworks-container:first-child {
-        margin-top: 20px;
-    }
-
-    .docworks-container {
-        margin-top: 60px;
     }
 
     .works-table .inner-padding {
@@ -190,7 +182,7 @@
 
         .works-table .inner-padding .properties {
             padding: 0 5px 0 5px;
-            background-color: #ffffff85;
+            background-color: #ffffffed;
         }
 
             .works-table .inner-padding .properties:last-child {
@@ -214,24 +206,31 @@
 
 
     .worktype-content {
-        padding: 0 0 0 15px;
-        margin: 0 15px 0px 15px;
+        padding: 5px;
+        margin: 0 8px;
         background: #ffffff57;
         box-shadow: 4px 3px 8px 1px rgba(0, 0, 0, 0.3);
-        min-height: 320px;
         overflow: hidden;
+        border-bottom-left-radius: 6px;
+        border-bottom-right-radius: 6px;
     }
+
+        .worktype-content .docworks-container {
+            margin: 10px;
+        }
 
         .worktype-content .doc-container {
             height: 158px;
             width: 200px;
-            background-color: #ffffff85;
+            background-color: #ffffffed;
             float: left;
-            padding: 0 10px 0 10px;
+            padding: 0px 10px;
+            margin-top: 5px;
             text-align: center;
             vertical-align: top;
             border-radius: 6px;
             overflow: hidden;
+            box-shadow: 1px 2px 3px 1px rgba(0, 0, 0, 0.2);
         }
 
             .worktype-content .doc-container p {
@@ -241,13 +240,11 @@
         .worktype-content .works-table {
             width: auto;
             overflow: hidden;
-            padding-left: 40px;
-            padding-right: 10px;
-            min-height: 310px;
+            padding: 5px 10px 0 30px;
         }
 
             .worktype-content .works-table > .tableMaterial {
-                box-shadow: 4px 3px 8px 1px rgba(0, 0, 0, 0.3)
+                box-shadow: 2px 1px 4px 1px rgba(0, 0, 0, 0.3)
             }
 
     .worktype-name {
