--- a/TranslationReg/Views/Projects/List.cshtml
+++ b/TranslationReg/Views/Projects/List.cshtml
@@ -45,11 +45,11 @@
                 </span>
             </div>
             <div class="col-md-2">
-                <div class="buttons-container">
-                    <a href="/Projects/Edit/@project.Id" class="icon-list">
+                <div class="icons-container">
+                    <a href="/Projects/Edit/@project.Id">
                         <i class="material-icons">mode_edit</i>
                     </a>
-                    <a data-href="/Projects/Delete/@project.Id" class="deleteBtn icon-list" data-dialog-title="Удаление проекта и содержимого">
+                    <a data-href="/Projects/Delete/@project.Id" class="deleteBtn" data-dialog-title="Удаление проекта и содержимого">
                         <i class="material-icons">delete</i>
                     </a>
                 </div>
