--- a/TranslationReg/Views/Projects/Project.cshtml
+++ b/TranslationReg/Views/Projects/Project.cshtml
@@ -74,10 +74,10 @@
                                     var currentDoc = oneDocStages.First().Document;
                                     <div class="doc-container">
                                         <img src="~/Uploads/DocIcons/Word.png" width="100" height="100" style="float:left" />
-                                        <div class="icons-row">
-                                            <a class="icon-list"><i class="material-icons">file_download</i></a>
-                                            <a class="icon-list"><i class="material-icons">edit</i></a>
-                                            <a class="icon-list"><i class="material-icons">delete</i></a>
+                                        <div class="icons-column">
+                                            <a><i class="material-icons">file_download</i></a>
+                                            <a><i class="material-icons">edit</i></a>
+                                            <a><i class="material-icons">delete</i></a>
                                         </div>
                                         <hr style="margin:5px" />
                                         <p style="margin:0">@currentDoc.Name</p>
@@ -135,14 +135,14 @@
                                                         </span>
                                                     </div>
                                                     <div class="col-md-3">
-                                                        <div class="buttons-container">
+                                                        <div class="icons-container">
                                                             @if (work.DocFileId != null)
                                                             {
-                                                                <a class="icon-list"><i class="material-icons">file_download</i></a>
+                                                                <a><i class="material-icons">file_download</i></a>
                                                             }
-                                                            <a class="icon-list"><i class="material-icons">file_upload</i></a>
-                                                            <a class="icon-list"><i class="material-icons">edit</i></a>
-                                                            <a class="icon-list"><i class="material-icons">delete</i></a>
+                                                            <a><i class="material-icons">file_upload</i></a>
+                                                            <a><i class="material-icons">edit</i></a>
+                                                            <a><i class="material-icons">delete</i></a>
                                                         </div>
                                                     </div>
                                                 </div>
